<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center|top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text"
            android:textSize="25sp"
            android:inputType="text"/>

        <Button
            android:id="@+id/generateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:padding="15dp"
            android:background="@drawable/newradious"
            android:textSize="15sp"
            android:text="@string/Btn_text"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/placeholderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/your_qr_code_will_be_shown_here"
                android:textSize="25sp"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/qrCodeImageView"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:layout_height="200dp"
                android:visibility="gone"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/downloadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@drawable/newradious"
                android:text="@string/download_qr_code"
                android:drawableBottom="@drawable/baseline_download_24"
                android:enabled="false"/>

            <Button
                android:id="@+id/shareButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="15dp"
                android:text="@string/share_qr_code"
                android:drawableBottom="@drawable/baseline_share_24"
                android:enabled="false"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
